--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="filler"></div>
       <div class="filler2"></div>
       <div class="title"><h1 style="text-align: center;">Monkey and Hunter problem</h1></div>
-      <div class="premise"><h1>The Premise</h1><br><span>A hunter tries to shoot a mobkey but knnows that as soon as he pulls the trigger the monkey will let go and enter freeFall</span></div>
+      <div class="premise"><h1>The Premise</h1><br><span>A hunter tries to shoot a monkey but knnows that as soon as he pulls the trigger the monkey will let go and enter freeFall</span></div>
       <div class="question"><h1>The question</h1><br><span>Where should the Hunter shoot? <br> Above the monkey <br> At the monkey <br> Below the monkey</span></div>
       <div class="breakdown"><h1>breakdown</h1> <br><span><h3>I will split the question in two: </h3> <br> How does gravity Work <br> <br> Treating the horizontal and veritical movement</span></div>
       <div class="grav"><h1>Gravity</h1><br><span>Gravity is a constant, meaning if you drop two items from the same height in a vacuum, they will hit the ground at the same time regardless of horizontal speed(as shown in the simulation on the right)<br> </span></div>
