--- a/canvas2.html
+++ b/canvas2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
+    <a style="text-decoration: none;" href="index.html"><button style="background-color: red;border: 0px; border-radius: 3px; color: aliceblue;">Back</button> </a>
     <div class="canvas2-cont"></div>
     <span style="color: blueviolet; text-align: center; margin-top: 20px;font-size: 40px;">Maths behind concept</span>
     <div class="img" ><img src="Assets/example.jpg" alt="math"></div>
