Cleaned up and fixed spelling mistakes

--- a/canvas2.html
+++ b/canvas2.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="Assets/Apple.png">
     <title>Document</title>
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -12,9 +13,9 @@
 </head>
 <body class="body">
     <a style="text-decoration: none;" href="index.html"><button style="background-color: red;border: 0px; border-radius: 3px; color: aliceblue;">Back</button> </a>
-    <div class="canvas2-cont"></div>
+    <div style="margin: 0 auto;" class="canvas2-cont"></div>
     <span style="color: blueviolet; text-align: center; margin-top: 20px;font-size: 40px;">Maths behind concept</span>
-    <div style=" margin: 0 auto;" class="img" ><img src="Assets\mathd.png" alt="math"></div>
+    <div style="margin: 10px auto; width: 80%;" class="img" ><img style="width: 100%;" src="Assets\mathd.png" alt="math"></div>
     
     
     <script src="Js/Canvas2.js"></script>
