Sliders messed up

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div>The simulation below shows what would happen if the hunter shot the monkey head on. 
     </div>
     
-      <div style="margin: 10px auto;width: 100%;display: block;" class="canvas1-container"></div>
+      <div style="margin: 10px auto;" class="canvas1-container"></div>
   
     <div> The simulation above was used to show how gravity is a constant and helps illustrate how the vertical and 
       horizontal components can be seperated <br> Regardless of the speed of the bullet (Horizontal component) both objects
