--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
-  <body>
+  <body style=" margin: auto, max-width: 1000px">
     
     <h1 style="text-align: center;">Monkey and Hunter problem</h1>
     <br><br><br>
